swagger(issue bearer token).
